--- a/index.html
+++ b/index.html
@@ -1,32 +1,67 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="lib/codemirror.css">
+    <link rel="stylesheet" href="lib/pastel-on-dark.css">
     <style>
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+      h1 {
+        font-family: sans-serif;
+        text-align: center;
+      }
+      #preview {
+        width: 800px;
+        height: 600px;
+        margin: auto;
+      }
+      #code {
+        width: 90%;
+        max-width: 800px;
+        margin: auto;
+      }
+      .CodeMirror {
+        border: 1px solid #eee;
+        height: auto;
+      }
+      .CodeMirror-scroll {
+        overflow-y: hidden;
+        overflow-x: auto;
+      }
 
     </style>
   </head>
   <body>
-    <h1>Fiddle Sticks</h1>
-    <p>wat</p>
-    <div id="code">
-      <textarea></textarea>
+    <h1>Phaser Sandbox</h1>
+    <div id="preview">
+      <iframe></iframe>
     </div>
-    <button id="load-code">Load</button>
-    <iframe id="preview"></iframe>
+    <div id="code">
+      <div>
+        <button id="load-code">Load</button>
+      <div>
+      <textarea id="code-box"></textarea>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="lib/codemirror.js"></script>
+    <script src="lib/mode/javascript/javascript.js"></script>
+    <script src="lib/addons/active-line.js"></script>
+    <script src="lib/addons/closebrackets.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script type="text/javascript">
 
       var Sandbox = {
         init: function() {
           Sandbox.template = _.template($('#template').html())
-          Sandbox.destination = $('#preview')[0]
+          Sandbox.destination = $('#preview iframe')[0]
           Sandbox.render()
-        }
-      , render: function() {
+        },
+        render: function() {
           var data = {
-            code: $('#code textarea').val()
-          , phaser: 'https://cdn.rawgit.com/photonstorm/phaser/2.1.0/build/phaser.js'
+            code: $('#code textarea').val(),
+            phaser: 'https://cdn.rawgit.com/photonstorm/phaser/2.1.0/build/phaser.js'
           }
           Sandbox.destination.srcdoc = Sandbox.template(data)
         }
@@ -35,6 +70,18 @@
       $(document).ready(function() {
         Sandbox.init()
         $('#load-code').on('click', Sandbox.render)
+        var myTextArea = document.getElementById('code-box')
+          , myCodeMirror = CodeMirror.fromTextArea(myTextArea, {
+          lineNumbers: true,
+          value: "function myScript(){return 100;}\n",
+          mode:  "javascript",
+          tabSize: 2,
+          lineWrapping: true,
+          matchBrackets: true,
+          styleActiveLine: true,
+          theme: 'pastel-on-dark',
+          autofocus: true
+        })
       })
 
     </script>
